--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -23,31 +23,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonSend"
-        android:layout_width="250dp"
+        android:id="@+id/buttonScan"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="100dp"
-        android:text="Send"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="79dp"
+        android:layout_marginEnd="106dp"
+        android:text="Scan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageBarcode" />
 
-    <Button
-        android:id="@+id/buttonModtag"
-        android:layout_width="250dp"
+    <ImageView
+        android:id="@+id/imageBarcode"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="100dp"
-        android:text="Modtag"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="91dp"
+        android:src="@drawable/default_qr"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />
+        app:layout_constraintTop_toBottomOf="@+id/titleView"
+        app:srcCompat="@drawable/default_qr" />
+
 </android.support.constraint.ConstraintLayout>
