Front end - Front end - Front end
ooooooooooooog Front end!

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="0.1"
+        android:src="@drawable/novonordisktekst_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.956" />
+
+    <ImageView
+        android:layout_width="412dp"
+        android:layout_height="405dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="0.1"
+        android:src="@drawable/novonordiskimage_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.592" />
+
     <TextView
         android:id="@+id/titleView"
         android:layout_width="0dp"
@@ -13,9 +39,11 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
-        android:text="DropByDrone"
+        android:background="@drawable/textview_border"
+        android:paddingTop="7dp"
+        android:text="@string/headline"
         android:textAlignment="center"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/darkBlue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,28 +52,32 @@
 
     <Button
         android:id="@+id/buttonSend"
+        android:background="@drawable/rounded_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="160dp"
         android:layout_marginEnd="100dp"
-        android:text="Send"
+        android:text="@string/button_send"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="@color/btText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
 
     <Button
         android:id="@+id/buttonModtag"
+        android:background="@drawable/rounded_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="100dp"
-        android:text="Modtag"
+        android:text="@string/button_receive"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="@color/btText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
