--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
-        android:text="DropByDrone"
+        android:text="@string/headline"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
@@ -29,7 +29,7 @@
         android:layout_marginStart="105dp"
         android:layout_marginTop="79dp"
         android:layout_marginEnd="106dp"
-        android:text="Scan"
+        android:text="@string/button_scan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageBarcode" />
