--- a/app/src/main/res/layout/activity_reroll.xml
+++ b/app/src/main/res/layout/activity_reroll.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RerollActivity">
 
     <TextView
         android:id="@+id/titleView"
@@ -23,42 +23,30 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonScan"
+        android:id="@+id/buttonRerollSend"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
-        android:layout_marginTop="79dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="106dp"
-        android:text="@string/button_scan"
+        android:text="@string/button_rerollSend"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageBarcode" />
-
-    <ImageView
-        android:id="@+id/imageBarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="91dp"
-        android:src="@drawable/default_qr"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleView"
-        app:srcCompat="@drawable/default_qr" />
+        app:layout_constraintTop_toBottomOf="@+id/titleView" />
 
     <Button
-        android:id="@+id/buttonIndtast"
+        android:id="@+id/buttonRerollModtag"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="106dp"
-        android:layout_marginBottom="123dp"
-        android:text="@string/button_indtast"
+        android:layout_marginBottom="333dp"
+        android:text="@string/button_rerollModtag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonRerollSend" />
 
 </android.support.constraint.ConstraintLayout>
