--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="123dp"
-        android:text="@string/button_indtast"
+        android:text="button_indtast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
