--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonRerollSend"
+        android:id="@+id/buttonSend"
         android:background="@drawable/rounded_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
 
     <Button
-        android:id="@+id/buttonRerollModtag"
+        android:id="@+id/buttonModtag"
         android:background="@drawable/rounded_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -81,5 +81,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRerollSend" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />
 </android.support.constraint.ConstraintLayout>
