--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="106dp"
         android:text="@string/button_scan"
-        android:onClick="onClickScan"
+        android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textBarcode" />
@@ -73,6 +73,7 @@
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="123dp"
         android:text="@string/ok"
+        android:stateListAnimator="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
