Intent til SmapleActivity done

--- a/app/src/main/res/layout/activity_sample_info.xml
+++ b/app/src/main/res/layout/activity_sample_info.xml
@@ -93,7 +93,7 @@
         android:background="@drawable/textview_thin_border"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:text="@string/text_infoID"
+        android:text="drone1"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toTopOf="@+id/imageNovoKo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +132,7 @@
         android:background="@drawable/textview_thin_border"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:text="@string/text_infoInfo"
+        android:text="Production1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -151,7 +151,7 @@
         android:background="@drawable/textview_thin_border"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:text="@string/text_infoINFO"
+        android:text="Lab1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -166,7 +166,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="382dp"
-        android:text="Text"
+        android:text="From"
         app:layout_constraintEnd_toStartOf="@+id/imageNovoKo"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,7 +179,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="152dp"
         android:layout_marginEnd="382dp"
-        android:text="Text"
+        android:text="To "
         app:layout_constraintEnd_toStartOf="@+id/imageNovoKo"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -192,7 +192,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="382dp"
-        android:text="Text"
+        android:text="Sample"
         app:layout_constraintEnd_toStartOf="@+id/imageNovoKo"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
